Data Layer in React
- Tackling JSON Schema
- Higher Order Components
- Controllable and Un-Controllable Components
- props drilling
- context in react

--- a/ReactJS/package.json
+++ b/ReactJS/package.json
@@ -11,9 +11,11 @@
   "author": "Mohammed Anasuddin",
   "license": "ISC",
   "dependencies": {
+    "@carbon/react": "^1.87.0",
     "parcel": "^2.15.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.3"
+    "react-router": "^7.6.3",
+    "remixicon": "^4.6.0"
   }
 }
