--- a/ReactJS/package.json
+++ b/ReactJS/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@carbon/react": "^1.87.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/postcss": "^4.1.11",
     "parcel": "^2.15.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.3",
-    "remixicon": "^4.6.0"
+    "remixicon": "^4.6.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
