--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ JavaScript/temp.js
 /ReactJS/coverage
 How to Master any Craft According to Ibn Al-Qayyim.mp4
 /ExpressJS/node_modules
+NodeJS/Notes/~$Node JS Todo.xlsx
