Working of Threadpool

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ JavaScript/temp.js
 How to Master any Craft According to Ibn Al-Qayyim.mp4
 /ExpressJS/node_modules
 NodeJS/Notes/~$Node JS Todo.xlsx
+NodeJS/Notes/Node JS Todo.xlsx
