How the Web Works and Servers
- Created http server

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ How to Master any Craft According to Ibn Al-Qayyim.mp4
 /ExpressJS/node_modules
 NodeJS/Notes/~$Node JS Todo.xlsx
 NodeJS/Notes/Node JS Todo.xlsx
+NodeJS/Notes/Node JS Todo.xlsx
