Connected NodeJS to MongoDB
- Visualized Tick of libUV Event Loop
 - MongoClient
- connection pool and string

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ How to Master any Craft According to Ibn Al-Qayyim.mp4
 NodeJS/Notes/~$Node JS Todo.xlsx
 NodeJS/Notes/Node JS Todo.xlsx
 NodeJS/Notes/Node JS Todo.xlsx
+/NodeJS/Notes/Notes_Node_Repo/node_modules
