--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ NodeJS/Notes/~$Node JS Todo.xlsx
 NodeJS/Notes/Node JS Todo.xlsx
 NodeJS/Notes/Node JS Todo.xlsx
 /NodeJS/Notes/Notes_Node_Repo/node_modules
+/NodeJS/project/node_modules
