--- a/NodeJS/project/package.json
+++ b/NodeJS/project/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev-server": "node --watch src\\app.js"
+    "dev-server": "node --watch src\\app.js"
   },
   "author": "Me",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.18.1"
   }
 }
