--- a/NodeJS/project/package.json
+++ b/NodeJS/project/package.json
@@ -10,7 +10,9 @@
   "author": "Me",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "validator": "^13.15.15"
   }
 }
