--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ NodeJS/Notes/Node JS Todo.xlsx
 /NodeJS/Notes/Notes_Node_Repo/node_modules
 /NodeJS/project/node_modules
 NodeJS/project/src/config/secrets.js
+/NodeJS/project/backend/node_modules
+/NodeJS/project/frontend/node_modules
