--- a/NodeJS/project/backend/package.json
+++ b/NodeJS/project/backend/package.json
@@ -10,8 +10,10 @@
   "author": "Me",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
