--- a/NodeJS/project/frontend/package.json
+++ b/NodeJS/project/frontend/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13",
-    "tailwindcss-radix-colors": "^2.1.0"
+    "tailwindcss-radix-colors": "^2.1.0",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
