backend Doubts Solved, Tanstack Query
- Explored Tanstack Query For Efefctive handling of Data and Rendering States.

--- a/ReactJS/package.json
+++ b/ReactJS/package.json
@@ -4,7 +4,7 @@
   "description": "Creating our own Production Ready React App",
   "scripts": {
     "test": "jest",
-    "start": "parcel .\\Building\\Project.html",
+    "start": "parcel .\\Building\\P.html",
     "build": "parcel build index.html",
     "notes": "parcel Notes\\notes.html"
   },
