--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ NodeJS/Notes/Node JS Todo.xlsx
 /NodeJS/project/node_modules
 NodeJS/project/src/config/secrets.js
 /NodeJS/project/backend/node_modules
+Version Control-GIt/.github/instructions/snyk_rules.instructions.md
