--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ NodeJS/Notes/Node JS Todo.xlsx
 NodeJS/project/src/config/secrets.js
 /NodeJS/project/backend/node_modules
 Version Control-GIt/.github/instructions/snyk_rules.instructions.md
+/Deployment/sample-project/backend/node_modules
